# face-detection-system

./: .gitignore  AGENTS.md  README.md  deep-research-report.md  repomix-output.xml
backend/: .env  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  config.py  events.py  faces.py  people.py  recognitions.py  server.py  user.py
backend/app/auth/: roles.py  security.py
backend/app/cli/: __init__.py  create_admin.py
backend/app/core/: config.py  errors.py
backend/app/db/: schema.sql  session.py
backend/app/repositories/: events.py  people.py  settings.py  templates.py  users.py
backend/app/schemas/: auth.py  config.py  events.py  people.py  recognition.py  server.py  validators.py
backend/app/services/enrollment/: prompt_pose.py  service.py
backend/app/services/recognition/: decision.py  model_loader.py  service.py  types.py  upload_validator.py
backend/app/services/storage/: local_storage.py
backend/tests/api/: test_api_contracts.py  test_server_routes.py  test_user_routes.py
backend/tests/integration/: test_database_paths.py  test_gpu_smoke.py
backend/tests/unit/: test_config.py  test_create_admin_command.py  test_decision.py  test_enrollment_service.py  test_model_loader.py  test_recognition_service.py  test_route_error_mapping.py  test_schema_id_serialization.py  test_security.py  test_seed_admin_script.py  test_template_repository.py  test_upload_validator.py  test_user_repository.py
client/: README.md  pubspec.yaml
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  (+5 more)
(+81 files in other folders)
