[project]
name = "face-detection-system-backend"
version = "0.1.0"
description = "Local-first FastAPI backend for face recognition access control."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.0"
]

[project.optional-dependencies]
gpu = [
  "insightface>=0.7.3",
  "onnxruntime-gpu>=1.19.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26.0"
]
test = [
  "pytest>=8.3.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "gpu: requires local InsightFace model and GPU/ONNX Runtime environment",
  "database: requires PostgreSQL with pgvector"
]
